--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "dotenv": "^15.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "typed.js": "^2.0.12"
   }
 }
