--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^15.0.1",
     "ejs": "^3.1.6",
